---------------------------------------------------------------------------
Version 3.17.0 (rgerhards), 2008-04-08
- added native ability to send mail messages
- removed no longer needed file relptuil.c/.h
- bugfix: memory leaks in script engine
- bugfix: zero-length strings were not supported in object
  deserializer
- properties are now case-insensitive everywhere (script, filters,
  templates)
- added the capability to specify a processing (actually dequeue)
  timeframe with queues - so things can be configured to be done
  at off-peak hours
- We have removed the 32 character size limit (from RFC3164) on the
  tag. This had bad effects on existing envrionments, as sysklogd didn't
  obey it either (probably another bug in RFC3164...). We now receive
  the full size, but will modify the outputs so that only 32 characters
  max are used by default. If you need large tags in the output, you need
  to provide custom templates.
- changed command line processing. -v, -M, -c options are now parsed
  and processed before all other options. Inter-option dependencies
  have been relieved. Among others, permits to specify intial module
  load path via -M only (not the environment) which makes it much
  easier to work with non-standard module library locations. Thanks
  to varmojfekoj for suggesting this change. Matches bugzilla bug 55.
- bugfix: some messages were emited without hostname
---------------------------------------------------------------------------
Version 3.15.1 (rgerhards), 2008-04-??
- bugfix: some messages were emited without hostname
- disabled atomic operations for the time being because they introduce some
  cross-platform trouble - need to see how to fix this in the best 
  possible way
- bugfix: zero-length strings were not supported in object
  deserializer
- added librelp check via PKG_CHECK thanks to Michael Biebl's patch
- file relputil.c deleted, is not actually needed
- added more meaningful error messages to rsyslogd (when some errors